chore: [#188284207] fix cta spacing on cannabis priority screen

--- a/web/src/styles/base/height-width.scss
+++ b/web/src/styles/base/height-width.scss
@@ -22,6 +22,10 @@
   min-height: 38rem;
 }
 
+.minh-2606 {
+  min-height: 26.6rem;
+}
+
 .minw-30 {
   min-width: 30rem;
 }
